--- a/app/src/main/res/layout/verificar_password.xml
+++ b/app/src/main/res/layout/verificar_password.xml
@@ -55,7 +55,7 @@
                     android:paddingBottom="20dp"
                     android:text="@{passwordModel.email}"
                     android:textAlignment="center"
-                    android:textColor="@color/colorBlue"
+                    android:textColor="@color/colorAccent"
                     android:textSize="18sp"/>
 
                 <com.google.android.material.textfield.TextInputLayout
