--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#F22A24</color>
-    <color name="colorPrimaryDark">#0C0C0C</color>
+    <color name="colorPrimaryDark">#600505</color>
     <color name="colorAccent">#B644D6</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorBotton">#1B3147</color>
