Hora y fecha actualizados

--- a/app/src/main/res/layout/activity_nueva_cita.xml
+++ b/app/src/main/res/layout/activity_nueva_cita.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,31 +31,70 @@
         android:inputType="textPersonName"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/fechaCita"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10sp"
-        android:layout_marginTop="8sp"
-        android:layout_marginRight="10sp"
-        android:layout_marginBottom="8sp"
-        android:ems="10"
-        android:hint="Dia de la cita (ej. 01/10/2020)"
-        android:inputType="textPersonName"
-        android:textStyle="bold"/>
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/horaCita"
+        <Button
+            android:id="@+id/bnFecha"
+            android:layout_width="wrap_content"
+            android:layout_height="29dp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="8sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginBottom="8sp"
+            android:background="@color/colorPrimary"
+            android:text="Eleguir"
+            android:textSize="14sp" />
+
+        <EditText
+            android:id="@+id/fechaCita"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="8sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginBottom="8sp"
+            android:ems="10"
+            android:hint="Dia de la cita"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10sp"
-        android:layout_marginTop="8sp"
-        android:layout_marginRight="10sp"
-        android:layout_marginBottom="8sp"
-        android:ems="10"
-        android:hint="Hora de la cita (ej. 13:00 hrs"
-        android:inputType="textPersonName"
-        android:textStyle="bold"/>
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/bnHora"
+            android:layout_width="wrap_content"
+            android:layout_height="29dp"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="8sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginBottom="8sp"
+            android:background="@color/colorPrimary"
+            android:text="Eleguir"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/horaCita"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10sp"
+            android:layout_marginTop="8sp"
+            android:layout_marginRight="10sp"
+            android:layout_marginBottom="8sp"
+            android:ems="10"
+            android:hint="Hora de la cita"
+            android:inputType="time"
+            android:textAlignment="center"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <EditText
         android:id="@+id/telefono"
@@ -68,8 +106,8 @@
         android:layout_marginBottom="8sp"
         android:ems="10"
         android:hint="Telefono del cliente"
-        android:inputType="textPersonName"
-        android:textStyle="bold"/>
+        android:inputType="phone"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/tipo"
@@ -82,7 +120,7 @@
         android:ems="10"
         android:hint="Tipo de cita (ej. Consulta)"
         android:inputType="textPersonName"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/precio"
@@ -94,8 +132,8 @@
         android:layout_marginBottom="8sp"
         android:ems="10"
         android:hint="Precio a cobrar"
-        android:inputType="textPersonName"
-        android:textStyle="bold"/>
+        android:inputType="numberDecimal"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/descripcion"
@@ -119,7 +157,7 @@
         android:layout_marginTop="15sp"
         android:layout_marginRight="20sp"
         android:layout_marginBottom="10sp"
-        android:backgroundTint="@color/colorPrimaryDark"
+        android:backgroundTint="@color/colorAccent"
         android:text="Guardar"
         android:textColor="#ffffff" />
 
