--- a/app/src/main/res/layout/item_cita.xml
+++ b/app/src/main/res/layout/item_cita.xml
@@ -59,20 +59,20 @@
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="51dp"
-        android:layout_marginEnd="108dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="98dp"
         android:text="Hora:"
         android:textSize="14sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/hora"
-        android:layout_width="wrap_content"
+        android:layout_width="69dp"
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="51dp"
-        android:layout_marginEnd="41dp"
+        android:layout_marginEnd="23dp"
         android:text="Hora"
         android:textSize="14sp" />
 </RelativeLayout>
