Base de datos de usuario

--- a/app/src/main/res/drawable/gradient_registrar.xml
+++ b/app/src/main/res/drawable/gradient_registrar.xml
@@ -5,7 +5,7 @@
     <gradient
         android:angle="90"
         android:endColor="#BE90CF"
-        android:startColor="#C1BB50" />
+        android:startColor="#D6D069" />
     <corners android:radius="0dp"/>
 
 </shape>
