--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -9,26 +9,25 @@
     tools:context=".AddUser">
 
     <TextView
-        android:id="@+id/tvTitulo"
+        android:id="@+id/titulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15sp"
         android:layout_marginTop="15dp"
         android:layout_marginRight="15sp"
-        android:text="TextView"
+        android:text="Datos del Usuario"
         android:textAlignment="center"
         android:textSize="26sp"
-        android:textStyle="bold|italic"
-        tools:text="Datos del Usuario" />
+        android:textStyle="bold|italic" />
 
     <ImageView
         android:id="@+id/ivUser"
-        android:layout_width="381dp"
-        android:layout_height="142dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginRight="15dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:layout_width="match_parent"
+        android:layout_height="139dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/ic_menu_camera" />
 
     <EditText
         android:id="@+id/etUsuario"
