--- a/app/src/main/res/layout/activity_users_detail.xml
+++ b/app/src/main/res/layout/activity_users_detail.xml
@@ -9,21 +9,20 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tvTitulo"
+        android:id="@+id/titulo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15sp"
         android:layout_marginTop="15dp"
         android:layout_marginRight="15sp"
-        android:text="TextView"
+        android:text="Usuario"
         android:textAlignment="center"
         android:textSize="26sp"
-        android:textStyle="bold|italic"
-        tools:text="Usuario" />
+        android:textStyle="bold|italic" />
 
     <ImageView
         android:id="@+id/ivUser"
-        android:layout_width="381dp"
+        android:layout_width="330dp"
         android:layout_height="142dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="30dp"
